# ursip

./: README.md  manage.py  pyproject.toml
calculations/: _models.py  actions.py  selectors.py  urls.py  views.py
calculations/datasources/: __init__.py  excel.py  sqlite.py
calculations/management/commands/: load_excel.py
calculations/migrations/: 0001_initial.py
calculations/templates/calculations/: start_page.html
docs/: data.xlsx
ursip/: asgi.py  settings.py  urls.py  wsgi.py
